<resources>
    <string name="app_name">Layout</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="energie">Energie:</string>
    <string name="waarvan_verzadigde_vetzuren">Waarvan verzadigde vetzuren:</string>
    <string name="waarvan_suikers">Waarvan suikers:</string>
    <string name="eiwitten">Eiwitten</string>
    <string name="zout">Zout:</string>
    <string name="koolhydraten">Koolhydraten:</string>
    <string name="vetten">Vetten:</string>
    <string name="title_activity_detail">activity_detail</string>
</resources>
